# grid

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md
backend/: Dockerfile  Makefile  README.md  alembic.ini  pyproject.toml
backend/src/grid/: main.py
backend/src/grid/api/: deps.py  ws.py
backend/src/grid/api/v1/: auth.py  cases.py  edges.py  entity_types.py  groups.py  health.py  nodes.py  notes.py  transform_runs.py  transforms.py  waypoints.py  ws_tickets.py
backend/src/grid/core/: config.py  crypto.py  errors.py  security.py  temporal_client.py
backend/src/grid/db/: session.py
backend/src/grid/db/alembic/: env.py
backend/src/grid/db/alembic/versions/: 244e9746d9db_seed_builtin_entity_types.py  bb9049a6c48e_transform_registry_and_runs.py  ea42ef050af7_baseline_schema.py
backend/src/grid/db/models/: __init__.py  cases.py  edges.py  entity_types.py  events.py  groups.py  mixins.py  nodes.py  notes.py  provenance.py  transforms.py  users.py  waypoints.py
backend/src/grid/events/: listener.py  manager.py  service.py  tickets.py
backend/src/grid/services/: auth.py  canonicalize.py  cases.py  edges.py  entity_types.py  groups.py  nodes.py  notes.py  transforms.py  waypoints.py
backend/src/grid/transforms/: base.py  registry.py  spec.py
backend/src/grid/transforms/builtins/: crtsh_subdomains.py  dns_forward.py  dns_reverse.py
backend/src/grid/workflows/: activities.py  launch.py  transform_workflow.py  worker.py
backend/tests/: conftest.py  test_health.py
backend/tests/api/: test_auth.py  test_authz_matrix.py  test_cases.py  test_edges.py  test_entity_types.py  test_groups.py  test_nodes.py  test_notes.py  test_transforms.py  test_waypoints.py  test_ws_tickets.py
backend/tests/core/: test_crypto.py  test_security.py
backend/tests/db/: test_migrations.py  test_models.py
backend/tests/events/: test_tickets.py
backend/tests/services/: test_entity_types.py  test_transforms.py
backend/tests/transforms/builtins/: test_crtsh_subdomains.py  test_dns_forward.py  test_dns_reverse.py
backend/tests/workflows/: test_transform_workflow.py
deploy/: compose.dev.yaml
docs/: ARCHITECTURE.md  DECISIONS.md  IDEAS.md  JOURNAL.md  PLAN.md
(+97 files in other folders)
