[project]
name = "grid"
version = "0.1.0"
description = "Grid — collaborative investigation platform (backend)"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "pydantic>=2.10",
    "pydantic-settings>=2.7",
    "email-validator>=2.2",
    "sqlalchemy>=2.0.36",
    "psycopg[binary,pool]>=3.2",
    "alembic>=1.14",
    "argon2-cffi>=23.1",
    "jsonschema>=4.23",
]

[dependency-groups]
dev = [
    "ruff>=0.9",
    "ty>=0.0.1a1",
    "pytest>=8.3",
    "pytest-asyncio>=0.25",
    "httpx>=0.28",
    "asgi-lifespan>=2.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/grid"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py313"
src = ["src", "tests"]
extend-exclude = ["src/grid/db/alembic/versions"]

[tool.ruff.lint]
select = [
    "E", "F", "I", "UP", "B", "SIM", "N", "C4", "RUF",
]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["grid"]

[tool.ty.environment]
python-version = "3.13"
root = ["./src"]
